--- a/_config.yml
+++ b/_config.yml
@@ -314,6 +314,17 @@ defaults:
       comments: # true
       share: true
       related: true
+  # _projects
+  - scope:
+      path: ""
+      type: projects
+    values:
+      layout: single
+      author_profile: true
+      read_time: true
+      comments: # true
+      share: true
+      related: true
   # _pages
   - scope:
       path: "_pages"
