fix profile image path and hopefully hyperlink?

--- a/_config.yml
+++ b/_config.yml
@@ -114,7 +114,7 @@ analytics:
 # Site Author
 author:
   name             : "Lawrence Luan Matsuoka"
-  avatar           : "/assets/images/peach.jpg"
+  avatar           : "/assets/images/peach.png"
   bio              : "I like math and low level programming. Definitely not a writer or technical writer"
   location         : "Canada"
   email            : 
