Change book-reviews to reading-list

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,7 +8,7 @@ main:
     url: /resume/
   - title: "Projects"
     url: /projects/
-  - title: "Book Reviews"
-    url: /book-reviews/
+  - title: "Reading List"
+    url: /reading-list/
   - title: "Mastodon Studios"
     url: /mastodon-studios/
